use lambda fucntion fpr method